@@ -62,7 +62,7 @@ libspectrum_byte sz53p_table[0x100]; /* OR the above two tables together */
 /* This is what everything acts on! */
 processor z80;
 
-int z80_interrupt_event, z80_nmi_event;
+int z80_interrupt_event, z80_nmi_event, z80_halt_event;
 
 static void z80_init_tables(void);
 static void z80_from_snapshot( libspectrum_snap *snap );
@@ -100,6 +100,7 @@ z80_init( void )
   z80_interrupt_event = event_register( z80_interrupt_event_fn,
 					"Retriggered interrupt" );
   z80_nmi_event = event_register( z80_nmi, "Non-maskable interrupt" );
+  z80_halt_event = event_register( NULL, "HALT dummy event" );
 
   module_register( &z80_module_info );
 }
@@ -156,7 +157,7 @@ z80_interrupt( void )
       return 0;
     }
 
-    if( z80.halted ) { PC++; z80.halted = 0; }
+    if( z80.halted ) { z80.halted = 0; }
     
     IFF1=IFF2=0;
 
@@ -196,7 +197,7 @@ z80_nmi( libspectrum_dword ts, int type, void *user_data )
   if( spectranet_available && spectranet_nmi_flipflop() )
     return;
 
-  if( z80.halted ) { PC++; z80.halted = 0; }
+  if( z80.halted ) { z80.halted = 0; }
 
   IFF1 = 0;
 
